[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Rock.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 25 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
Rock = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200, 520 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Floor" type="Area2D" parent="." groups=[
"rock_killer",
]]
position = Vector2( 0, 552 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 198.318, 24.303 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Floor"]
margin_right = 400.0
margin_bottom = 50.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="body_entered" from="Floor" to="." method="_on_Floor_body_entered"]
